# GitStudy

./: CMakeLists.txt  README.md  main.c
1/: text1.3.h
1/1.3/: text1.3.c
2/: symbolic.c  symbolic.h
2/2.1/symbolic/: symbolic.c  symbolic.h
3/: operator.c  operator.h
4/: cycle.c  cycle.h
5/: array.c  array.h
6/: pointer.c  pointer.h
7/: recurrence .c  recurrence .h
8/: struct_text.c  struct_text.h
algorithm_exercise/: 1605.c  1605.h
text/: text.c  text.h
